# upsonic-investment-report-generator

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  agents.py  app.py  compose.yml  demo.sh  main.py  pyproject.toml  requirements.txt  system_prompts.py  tools.py
assets/: investment-report-generator.excalidraw
docs/: README.md
notebooks/: investment_report_generator.ipynb  requirements.txt
reports/: demo_investment_leader_report_20250714225518.md  demo_research_analyst_report_20250714155708.md  demo_research_analyst_report_20250714155932.md  demo_research_analyst_report_20250714174113.md  demo_research_analyst_report_20250714174227.md  demo_research_analyst_report_20250714174443.md  demo_research_analyst_report_20250714225505.md  demo_stock_analyst_report_20250714155623.md  demo_stock_analyst_report_20250714155708.md  demo_stock_analyst_report_20250714174227.md  demo_stock_analyst_report_20250714174443.md  demo_stock_analyst_report_20250714225451.md
src/: agents.py  app.py  demo.py  main.py  system_prompts.py  tools.py  workflow.py
src/tasks/: list.py  new.py  research_analyst.py  stock_analyst.py
src/tools/: http.py  mcp.py  stdio.py
tasks/: investment_lead.py  list.py  response.py
tools/: mcp.py  stdio.py
